<resources>
    <string name="app_name">CalculatorApp</string>

    <string name="zero_btn">0</string>
    <string name="one_btn">1</string>
    <string name="two_btn">2</string>
    <string name="three_btn">3</string>
    <string name="four_btn">4</string>
    <string name="five_btn">5</string>
    <string name="six_btn">6</string>
    <string name="seven_btn">7</string>
    <string name="eight_btn">8</string>
    <string name="nine_btn">9</string>

    <string name="clear_btn">C</string>
    <string name="exponent_btn">^</string>
    <string name="parentheses_btn">( )</string>
    <string name="divide_btn">÷</string>
    <string name="multiply_btn">×</string>
    <string name="add_btn">+</string>
    <string name="subtract_btn">-</string>
    <string name="plusMinus_btn">+/-</string>
    <string name="point_btn">.</string>
    <string name="equals_btn">=</string>

    <string name="backspace_btn">del</string>
    <string name="display_textView">Waiting for input to calculate</string>
    <string name="contentDescription_backspacebutton">backspaceButton</string>

</resources>