<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_clear"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:textSize="24sp"
                android:background="@drawable/button_background"
                app:backgroundTint="@color/clearBtn_red"
                android:text="@string/clear_btn"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btn_parentheses"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:textSize="24sp"
                android:background="@drawable/button_background"
                android:text="@string/parentheses_btn"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btn_exponent"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:textSize="24sp"
                android:background="@drawable/button_background"
                android:text="@string/exponent_btn"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btn_divide"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:textSize="24sp"
                android:background="@drawable/button_background"
                android:text="@string/divide_btn"
                tools:ignore="TextContrastCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_seven"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:textSize="24sp"
                android:background="@drawable/button_background"
                android:text="@string/seven_btn"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btn_eight"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:textSize="24sp"
                android:background="@drawable/button_background"
                android:text="@string/eight_btn"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btn_nine"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:textSize="24sp"
                android:background="@drawable/button_background"
                android:text="@string/nine_btn"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btn_multiply"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:textSize="24sp"
                android:background="@drawable/button_background"
                android:text="@string/multiply_btn"
                tools:ignore="TextContrastCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_four"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:textSize="24sp"
                android:background="@drawable/button_background"
                android:text="@string/four_btn"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btn_five"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:textSize="24sp"
                android:background="@drawable/button_background"
                android:text="@string/five_btn"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btn_six"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:textSize="24sp"
                android:background="@drawable/button_background"
                android:text="@string/six_btn"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btn_subtract"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:textSize="24sp"
                android:background="@drawable/button_background"
                android:text="@string/subtract_btn"
                tools:ignore="TextContrastCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_one"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:textSize="24sp"
                android:background="@drawable/button_background"
                android:text="@string/one_btn"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btn_two"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:textSize="24sp"
                android:background="@drawable/button_background"
                android:text="@string/two_btn"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btn_three"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:textSize="24sp"
                android:background="@drawable/button_background"
                android:text="@string/three_btn"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btn_add"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:textSize="24sp"
                android:background="@drawable/button_background"
                android:text="@string/add_btn"
                tools:ignore="TextContrastCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_plusMinus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:textSize="24sp"
                android:background="@drawable/button_background"
                android:text="@string/plusMinus_btn"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btn_zero"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:textSize="24sp"
                android:background="@drawable/button_background"
                android:text="@string/zero_btn"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btn_point"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:textSize="24sp"
                android:background="@drawable/button_background"
                android:text="@string/point_btn"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btn_equals"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                app:backgroundTint="@color/equalsBtn_green"
                android:text="@string/equals_btn"
                android:textSize="24sp"
                tools:ignore="TextContrastCheck" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:autofillHints="false"
        android:inputType="none"
        android:padding="4dp"
        android:text="@string/display_textView"
        android:textAlignment="textEnd"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <ImageButton
        android:id="@+id/btn_backspace"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:background="@drawable/button_background"
        app:srcCompat="@drawable/backspace_button_background"
        android:text="@string/backspace_btn"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextContrastCheck"
        android:contentDescription="@string/contentDescription_backspacebutton" />
</androidx.constraintlayout.widget.ConstraintLayout>